@@ -1,3 +1,9 @@
+2008-11-20  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>
+
+	* tag V00-12-01
+	* call fsm_.findRcmsStateListener()
+	* requires EventFilter/Utilities V00-15-01
+
 2008-11-03  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
 
 	* tag V00-12-00
